--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -21,10 +21,17 @@ scope;
 @import "@statamic/ui/ui.css";
 @source "../../vendor/statamic/cms/packages/ui/src";
 
+@import './base/variables.css';
+@layer elements {
+    /* This needs to outside the @scope for Safari */
+    html {
+        background: var(--color-body-background);
+        color: var(--color-primary-text);
+    }
+}
 :root {
     interpolate-size: allow-keywords;
 }
-@import './base/variables.css';
 @scope (html) to (.ui-component-example__render, [data-dismissable-layer]) {
     @import './base/reset.css';
     @import './base/elements/elements.css';
